fix: targeting highlight-figures instead of vehicles-wizard for margin spacing

--- a/client/src/css/Dashboard.css
+++ b/client/src/css/Dashboard.css
@@ -580,8 +580,8 @@
     margin-right: 5px;
   }
 
-  .dashboard-header:not(.header-on) .vehicles-wizard {
-    margin-top: 20px;
+  .dashboard-header:not(.header-on) .highlight-figures {
+    margin-top: 16px;
   }
 
   .dashboard-title .highlight-figures {
